<resources>
    <string name="app_name">NoteIt</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="instant_note">Instant Note</string>
    <string name="add_new_note">Add New Note</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_note_confirmation">Do you really want to delete this note?</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="edit_note">Edit Note</string>
    <string name="incorrect_data">Invalid Title!</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">loginName</string>
</resources>