<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_instant_note"
        android:name="com.sww.noteit.view.InstantNoteFragment"
        android:label="@string/instant_note"
        tools:layout="@layout/instant_note_fragment"/>

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.sww.noteit.view.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/settings_fragment"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.sww.noteit.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment"/>

</navigation>